--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div class="clearfix"></div>
     <div class="nav2">
       <p class="nav-title">Condition</p>
-      <input type="checkbox" class="checkbox" id="checkbox-free" name="condition" value="免費參觀"><p>免費參觀</p>
+          <input type="checkbox" class="checkbox" id="checkbox-free" name="condition" value="免費參觀">
+      <p>免費參觀</p>
       <input type="checkbox" class="checkbox" id="checkbox-allday" name="condition" value="全天候開放"><p>全天候開放</p>
     </div>
   </div>
