--- a/index.html
+++ b/index.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" >
-
 <head>
-  <meta charset="UTF-8">
-  <title>F2E-W2-FunKS</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <head>
   <script src="https://use.fontawesome.com/248751b450.js">
     
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
@@ -25,7 +10,7 @@
 </head>
 <div id="top">
   <div id="logo">
-    <p>Fun K.S.</p>
+    <p>Fun KaohSiung</p>
   </div>
   <div id="topNav">
     <div class="nav1">
@@ -91,14 +76,6 @@
 </div>
 <div id="show-result">
 </div>
+<div class="pagesbtn">
   
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
-</body>
-
-</html>
+</div>
