--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <script src="https://use.fontawesome.com/248751b450.js">
     
@@ -5,9 +6,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
+  <link href='css/style.css' rel='stylesheet' type='text/css'>
 
 </head>
+<body>
 <div id="top">
   <div id="logo">
     <p>Fun KaohSiung</p>
@@ -79,3 +81,7 @@
 <div class="pagesbtn">
   
 </div>
+  
+<script  src="js/index.js"></script>
+</body>
+</html>
